<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_header"
            android:src="@drawable/album1"
            android:contentDescription="@string/Album" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/text_msg_rate"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/msg_rate"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Spinner
                android:id="@+id/spinner_rate"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="true"
                android:entries="@array/array_rate"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_msg_recommendation"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/msg_recommendation"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/toggle_button"
                android:textOn="@string/msg_yes"
                android:textOff="@string/msg_no"
                android:onClick="toggleClicked"
                android:text="@string/msg_recommendation"/>

        </LinearLayout>
        <TextView
            android:id="@+id/text_msg_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_barra"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_msg_front_desk_0"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/msg_barra_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <SeekBar
                android:id="@+id/seekBar_front_desk"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:progress="100"
                android:layout_weight="3" />
            <TextView
                android:id="@+id/txt_msg_front_desk_100"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/msg_barra_100"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
